--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "standard && tape test/**/*.test.js",
+    "test": "standard && tape test/**/*.test.js | faucet",
     "docs": "jsdoc2md lib/**/*.js > api.md"
   },
   "repository": {
@@ -38,6 +38,7 @@
   },
   "homepage": "https://github.com/jrleszcz/decision-graph#readme",
   "devDependencies": {
+    "faucet": "0.0.1",
     "jsdoc-to-markdown": "^1.1.1",
     "standard": "^5.1.1",
     "tape": "^4.2.0"
