--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jrleszcz/decision-graph.git"
+    "url": "git+https://github.com/jrleszcz/grammar-graph.git"
   },
   "keywords": [
     "graph",
+    "grammar graph",
+    "generator",
+    "language generator",
     "digraph",
     "directed graph",
     "decision-making graph",
@@ -36,14 +39,13 @@
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/jrleszcz/decision-graph/issues"
+    "url": "https://github.com/jrleszcz/grammar-graph/issues"
   },
-  "homepage": "https://github.com/jrleszcz/decision-graph#readme",
+  "homepage": "https://github.com/jrleszcz/grammar-graph#readme",
   "devDependencies": {
     "faucet": "0.0.1",
     "jsdoc-to-markdown": "^1.1.1",
     "standard": "^5.1.1",
     "tape": "^4.2.0"
-  },
-  "dependencies": {}
+  }
 }
