fix: npm run docs now checks only files in lib

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "test": "standard && tape test/**/*.test.js | faucet",
-    "docs": "jsdoc2md lib/**/*.js > api.md"
+    "docs": "jsdoc2md lib/*.js > api.md"
   },
   "repository": {
     "type": "git",
