add pre/post-version scripts

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "scripts": {
     "test": "standard && tape test/**/*.test.js | faucet",
-    "docs": "jsdoc2md lib/*.js > api.md"
+    "docs": "jsdoc2md lib/*.js > api.md",
+    "preversion": "npm test",
+    "postversion": "git push"
   },
   "repository": {
     "type": "git",
