--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "grammar-graph",
   "version": "2.0.0",
   "description": "Takes a context-free grammar and converts it into a decision-making graph. Can produce interactive Guides which generate valid sentences from the grammar.",
-  "main": "index.js",
+  "main": "./lib/grammar-graph.js",
   "directories": {
     "lib": "./lib",
     "test": "./test"
