--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "./test"
   },
   "scripts": {
-    "test": "standard && tape \"test/**/*.test.js\" | faucet",
+    "test": "eslint && tape \"test/**/*.test.js\" | faucet",
     "docs": "jsdoc2md lib/grammar-graph.js lib/guided-decision-graph.js lib/recognizer.js > api.md && jsdoc2md \"lib/**/*.js\" > internal-api.md",
     "preversion": "npm test",
     "postversion": "git push"
@@ -49,7 +49,7 @@
   "devDependencies": {
     "faucet": "0.0.1",
     "jsdoc-to-markdown": "^1.1.1",
-    "standard": "^5.3.0",
-    "tape": "^4.2.0"
+    "tape": "^4.2.0",
+    "eslint": "^3.14.0"
   }
 }
